--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                 <li><strong>Platform Builders:</strong> Desenvolvedor Mulesoft (2021 - 2022)</li>
                 <li><strong>Memora Processos:</strong> Desenvolvedor Java Sênior (2020 - 2021)</li>
                 <li><strong>Coca-Cola Bandeirantes:</strong> Analista AMS II (2018 - 2020)</li>
+                <li><strong>PC Sistemas - TOTVS:</strong> Desenvolvedor Delphi (2006 - 2018)</li>
                 <!-- Adicionar mais conforme necessário -->
             </ul>
         </section>
