--- a/index.html
+++ b/index.html
@@ -41,12 +41,14 @@
         <section id="experiencia">
             <h2>Experiência Profissional</h2>
             <ul>
-                <li><strong>Plena Softwares:</strong> Desenvolvedor Java e proprietário (2020 - Presente)</li>
-                <li><strong>Prestcon:</strong> Analista de Desenvolvedor de Sistemas (2022 - 2023)</li>
+                <li><strong>Plena Softwares:</strong> Desenvolvedor Java / Delphi e proprietário (2020 - Presente)</li>
+                <li><strong>Prestcon:</strong> Analista de Desenvolvedor de Sistemas Java (2022 - 2023)</li>
                 <li><strong>Platform Builders:</strong> Desenvolvedor Mulesoft (2021 - 2022)</li>
                 <li><strong>Memora Processos:</strong> Desenvolvedor Java Sênior (2020 - 2021)</li>
-                <li><strong>Coca-Cola Bandeirantes:</strong> Analista AMS II (2018 - 2020)</li>
+                <li><strong>Coca-Cola Bandeirantes:</strong> Analista AMS II Java (2018 - 2020)</li>
                 <li><strong>PC Sistemas - TOTVS:</strong> Desenvolvedor Delphi (2006 - 2018)</li>
+                <li><strong>ICS Informática e Consultoria da Saúde:</strong> Desenvolvedor Delphi (2002 - 2004)</li>
+                <li><strong>ENGEGRAPH Engenharia e Sistemas:</strong> Desenvolvedor Delphi (1999 - 2000)</li>
                 <!-- Adicionar mais conforme necessário -->
             </ul>
         </section>
