--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <p><strong>Telefone:</strong> (62) 98413-8625</p>
             <p><strong>Localização:</strong> Goiânia – Goiás</p>
             <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/fabricio-guimaraes-lima/" target="_blank">linkedin.com/in/fabricio-guimaraes-lima</a></p>
+            <p><strong>GitHub:</strong> <a href="https://github.com/fabricioglimadev" target="_blank">github.com/fabricioglimadev</a></p>
         </section>
         <section id="objetivo">
             <h2>Objetivo</h2>
@@ -36,7 +37,20 @@
         </section>
         <section id="resumo">
             <h2>Resumo</h2>
-            <p>Desenvolvedor com experiência em Delphi e Java, especializado em desenvolvimento de aplicações web com Spring Framework e integrações REST/SOAP. Provedor de soluções por meio de APIs e integrações complexas.</p>
+            <p> Iniciei no desenvolvimento de software com o Delphi, na criação de aplicações desktop para 
+                plataforma Windows, com sistemas para cartório de registro de imóveis Depois, fui para PC 
+                Sistemas - TOTVS onde atuei em projetos no desenvolvimento de aplicação desktop para 
+                ERP de atacado/distribuidor Winthor. Desenvolvimento de integrações entre sistemas para 
+                atacado e varejo, atacado com indústria. Foram integrações com SOAP, REST, arquivos e 
+                banco de dados. Criação de relatórios com Report Builder. Banco de dados Oracle, 
+                PL/SQL. Depois passei a atuar no desenvolvimento de aplicações web com Java, Spring 
+                Boot, Spring MVC com Thymeleaf, Spring JPA. Desenvolvimento de APIs com Java/Spring 
+                Boot para integração entre sistemas Rest, JSON e SOAP. Também possuo conhecimento 
+                em Mulesoft, integração via REST, SOAP. Git como ferramentas de versionamento, Jira, 
+                Bitbucket, Azure Devops.
+                 Atualmente possuo minha empresa, Plena Softwares, onde presto serviço em 
+                desenvolvimento de software, como PJ. Onde desenvolvo aplicações em Java. Criação de 
+                APIs com Java, Spring Boot, integração entre sistemas.</p>
         </section>
         <section id="experiencia">
             <h2>Experiência Profissional</h2>
